--- a/app/assets/javascripts/app/accounts.js.coffee.erb
+++ b/app/assets/javascripts/app/accounts.js.coffee.erb
@@ -1,6 +1,6 @@
-app = angular.module 'accounts', []
+app = angular.module 'accounts', ['ui.bootstrap']
 
-app.controller 'AccountsController', ['$http', ($http) ->
+app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $http, $uibModal) ->
   _self = this
   @types = ['Asset', 'Liability', 'Equity', 'Income', 'Expense']
   @accounts = []
@@ -16,7 +16,38 @@ app.controller 'AccountsController', ['$http', ($http) ->
 
   @new = ->
     _self.formAccount = {}
+    modalInstance = $uibModal.open {
+      animation: true,
+      templateUrl: 'account-form.html',
+      controller: 'AccountFormController',
+      scope: $scope
+    }
 
+  $scope.save = ->
+
+    console.log "save"
+
+    if _self.formAccount.id then _self.update() else _self.create()
+
+  @update = -> false
+
+  @create = ->
+
+    console.log "create"
+
+    # TODO Use the correct entity ID
+    $http.post("entities/14/accounts.json", _self.formAccount).then (result) ->
+
+      console.log "save succeeded"
+
+      _self.accounts.push result
+      true
+    , (error) ->
+      console.log "unable to save the new account"
+      console.log error
+      false
+
+  # TODO Use the correct entity ID
   $http.get("/entities/14/accounts.json").success (data) ->
     _self.accounts = data
     groupedAccounts = _.groupBy data, 'account_type'
@@ -45,6 +76,16 @@ app.controller 'AccountsController', ['$http', ($http) ->
       list
     , []).value()
   return
+]
+
+app.controller 'AccountFormController', ['$scope', '$uibModalInstance', ($scope, $uibModalInstance) ->
+  $scope.ok = ->
+
+    console.log "ok"
+
+    $scope.save -> $uibModelInstance.close()
+  $scope.cancel = ->
+    $uibModalInstance.dismiss('cancel')
 ]
 
 app.directive 'accountManager', ->
