--- a/app/assets/templates/account-manager.html.haml
+++ b/app/assets/templates/account-manager.html.haml
@@ -1,33 +1,31 @@
 .accountContent{ 'ng-controller' => 'AccountsController as accountsCtrl' }
-  #accountFormContainer.modal.fade{ :role => 'dialog', 'aria-hidden' => 'true' }
-    .modal-dialog
-      .modal-content
-        .modal-header
-          %button.close{ 'data-dismiss' => 'modal', 'aria-hidden' => 'true' } &times;
-          %h3.modal-title New account
-        .modal-body
-          %form
-            .form-group
-              %label{ :for => 'account_name' } Name
-              %input.form-control{ :type => 'text', :id => 'account_name', :name => 'account_name', 'ng-model' => 'accountsCtrl.formAccount.name', 'focus-on' => '!!accountsCtrl.formAccount' }
-            .form-group
-              %label{ :for => 'account_type' } Type
-              %select.form-control{ :id => 'account_type', :name => 'account_type', 'ng-model' => 'accountsCtrl.formAccount.account_type' }
-                %option{ 'ng-repeat' => 'type in accountsCtrl.types', :value => '{{ type.toLowerCase() }}' } {{ type }}
-            .form-group
-              %label{ :for => 'account_parent' } Parent
-              %select.form-control{ :id => 'account_parent', :name => 'account_parent', 'ng-model' => 'accountsCtrl.formAccount.parent_id' }
-                %option{ :value => ''} None
-                %option{ 'ng-repeat' => 'account in accountsCtrl.formTypes()', :value => '{{ account.id }}' } {{ account.path }}
-        .modal-footer
-          %button.btn.btn-primary{ 'ng-click' => 'accountsCtrl.save' } Save
-          %button.btn.btn-default{ 'data-dismiss' => 'modal' } Cancel
+  %script{ :type => 'text/ng-template', :id => 'account-form.html' }
+    .modal-header
+      %button.close{ 'data-dismiss' => 'modal', 'aria-hidden' => 'true' } &times;
+      %h3.modal-title New account
+    .modal-body
+      %form
+        .form-group
+          %label{ :for => 'account_name' } Name
+          %input.form-control{ :type => 'text', :id => 'account_name', :name => 'account_name', 'ng-model' => 'accountsCtrl.formAccount.name', 'focus-on' => '!!accountsCtrl.formAccount' }
+        .form-group
+          %label{ :for => 'account_type' } Type
+          %select.form-control{ :id => 'account_type', :name => 'account_type', 'ng-model' => 'accountsCtrl.formAccount.account_type' }
+            %option{ 'ng-repeat' => 'type in accountsCtrl.types', :value => '{{ type.toLowerCase() }}' } {{ type }}
+        .form-group
+          %label{ :for => 'account_parent' } Parent
+          %select.form-control{ :id => 'account_parent', :name => 'account_parent', 'ng-model' => 'accountsCtrl.formAccount.parent_id' }
+            %option{ :value => ''} None
+            %option{ 'ng-repeat' => 'account in accountsCtrl.formTypes()', :value => '{{ account.id }}' } {{ account.path }}
+    .modal-footer
+      %button.btn.btn-primary{ 'ng-click' => 'ok()' } Save
+      %button.btn.btn-default{ 'ng-click' => 'cancel()' } Cancel
   .row
     .col-md-6
       .panel.panel-primary
         .panel-heading
           .pull-right
-            %a.btn.btn-default.btn-xs{ 'ng-click' => 'accountsCtrl.new()', :href => '#', :data => { :toggle => 'modal', :target => '#accountFormContainer' } }
+            %button.btn.btn-default.btn-xs{ 'ng-click' => 'accountsCtrl.new()' }
               %span.glyphicon.glyphicon-plus{ 'aria-hidden' => 'true' }
           Accounts
 
