add jumbotron to welcome page

--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -1,2 +1,6 @@
-=content_for :page_title do
-  Welcome!
+.jumbotron
+  %h1#page_title Money
+  %p
+    This is an accounting app that I wrote. It uses Ruby on Rails.
+  %p
+    =link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary'
