--- a/app/assets/templates/account-register.html.haml
+++ b/app/assets/templates/account-register.html.haml
@@ -9,5 +9,5 @@
       %td {{ item.transaction_date | date:shortDate }}
       %td {{ item.description }}
       %td {{ item.polarized_amount | number:2 }}
-      %td {{ item.balance | number.2 }}
+      %td {{ item.balance | number:2 }}
       
