add addount-register UI element

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -10,3 +10,4 @@
 
   %entity-manager{ 'ng-show' => 'search.isSelected("entity-manager")' }
   %account-manager{ 'ng-show' => 'search.isSelected("account-manager")' }
+  %account-register{ 'ng-show' => 'search.isSelected("account-register")' }
